syntax = "proto3";

option java_multiple_files = true;
option java_package = "billingService";

message BillingRequest{
    string patientId = 1;
    string name = 2;
    string email = 3;
}

message BillingRespnse{
    string accountId = 1;
    string status = 2;
}

service BillingService{
    rpc CreateBillingAccount(BillingRequest) returns (BillingRespnse);
}